structure and styling done

--- a/index.html
+++ b/index.html
@@ -8,9 +8,27 @@
     <link rel="stylesheet" href="style.css">
     <title>Weather App</title>
 </head>
-<h2>Weather App in javaScript</h2>
+
 
 <body>
+    <h2 class="title">Weather App in javaScript</h2>
+    <div class="container">
+        <form class="form" action="">
+            <div class="searchForm">
+                <input placeholder="Enter City" class="inputText" type="text" name="inputText" id="inputText" required>
+                <input class="submitBtn" type="submit" value="Search">
+            </div>
+        </form>
+        <div class="position">
+            <div class="position-item" id="langitude">
+                <p> langitude</p>
+            </div>
+            <div class="position-item" id="laptitude">
+                <p> laptitude </p>
+            </div>
+        </div>
+
+    </div>
 
 
     <script src="javaScript.js"></script>
