--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 <p> laptitude </p>
             </div>
         </div>
+        <div class="temperature">
+            <p>Temperature is </p>
+            <span class="tempDigit">30°C</span>
+        </div>
 
     </div>
 
