--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <p>Temperature is </p>
             <span class="tempDigit">30°C</span>
         </div>
+        <p class="cityName">City Name</p>
 
     </div>
 
