--- a/index.html
+++ b/index.html
@@ -20,19 +20,21 @@
             </div>
         </form>
         <div class="position">
-            <div class="position-item" id="langitude">
+            <div class="position-item">
                 <p> langitude</p>
+                <p id="langitude"></p>
             </div>
-            <div class="position-item" id="laptitude">
+            <div class="position-item">
                 <p> laptitude </p>
+                <p id="laptitude"></p>
             </div>
         </div>
         <div class="temperature">
-            <p>Temperature is </p>
-            <span class="tempDigit">30°C</span>
+            <p>Temperature:</p>
+            <span class="tempDigit">°C</span>
         </div>
-        <p class="cityName">City Name</p>
-
+        <p class="cityName"></p>
+        <p class="weatherStatus">Weather Status: <span class="statusData"></span></p>
     </div>
 
 
